finish services part

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,13 +4,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 .App{
   display: flex;
   justify-content: center;
 }
 .container{
-  border: 1px solid;
   display: flex;
   flex-direction: column;
   align-items: center;
