--- a/my-app/src/Styles/Header.css
+++ b/my-app/src/Styles/Header.css
@@ -3,11 +3,11 @@
 }
 .header{
     display: flex;
-
     width: 100%;
     justify-content: space-around;
     padding: 10px;
     align-items: center;
+    border-bottom: 1px solid #ccc;
 }
 .logo{
     width: 90px;
