--- a/my-app/src/Styles/Contact.css
+++ b/my-app/src/Styles/Contact.css
@@ -12,13 +12,14 @@
     flex-direction: column;
 }
 .contact-address img{
-    width: 400px;
+    width: 100%;
 }
 .contact-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 20px;
+    padding: 10px;
     
 }
 .contact a{
@@ -34,40 +35,33 @@
 .contact-location iframe{
     outline: none;
     border: none;
-
     width: 600px;
     height: 400px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
 }
-@media (max-width:760px) {
-    .contact{
-        flex-direction: column;
-        gap: 40px;
-    }
-    .contact-location iframe{
-        width: 400px;
-    }
-    
-}
 .links{
     display: flex;
     gap: 20px;
-    font-size: 1.2em;
+    padding-bottom: 20px;
 }
-@media (max-width:410px) {
+@media(max-width:1050px){
     .contact{
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 40px;
+    
     }
     .contact-content{
-        border: 1px solid;
-    
+        width: 100%;
     }
+
+
+}
+@media(max-width:700px){
+
     .contact-location iframe{
-        width:350px;
+        width: 300px;
+        height: 200px;
     }
-    
+
+
 }
