--- a/my-app/src/Styles/MainBanner.css
+++ b/my-app/src/Styles/MainBanner.css
@@ -28,19 +28,16 @@
 .main-banner-poster img{
     width: 100%;
 }
-@media (max-width:1000px) {
+@media(max-width:1024px){
     .main-banner{
         flex-direction: column;
-        height: auto;
-        gap: 20px;
+        height:auto;
+        margin-top: 20px;
     }
     .main-banner-content{
         width: 100%;
+        padding: 10px;
         text-align: center;
     }
-    .main-banner-content h2{
-        font-size: 2em;
-        margin-top: 100px;
-    }
-    
+
 }
