--- a/my-app/src/Styles/Services.css
+++ b/my-app/src/Styles/Services.css
@@ -4,15 +4,11 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    
-    
-
 }
 .services-title{
     text-align: center;
     margin-top: 20px;
-  
-
+    
 }
 .services-title h2{
     font-size: 3em;
@@ -46,20 +42,23 @@
 }
 .service-card-content{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     z-index: 50;
+    width: 100%;
+   
+   
    
 }
 .service-card-content p{
-    width: 900px;
     text-align: center;
     font-size: 1.6em;
     font-weight: 700;
     color: #0D515A;
     line-height: 50px;
     padding: 10px;
+    height:500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -67,22 +66,33 @@
     width:100%;
     height: 500px;
     object-fit: cover;
-    /* filter: blur(6px); */
     border-radius: 12px;
     opacity: 0.3;
+
 }
 
-@media(max-width:700px){
-    .service-card-content p{
-        width: 500px;
-        font-size: 1em;
-        line-height: 35px;
+@media(max-width:1050px){
+    .services-title h2{
+        font-size: 2em;
+        line-height: 50px;
     }
+    .services-title p{
+        font-size: 1em;
+    }
+    .service-card-content p{
+        font-size: 1.2em;
+        line-height: 50px;
+
+    }
+
+
+
 }
-@media(max-width:500px){
+@media(max-width:800px){
     .service-card-content p{
-        width: 400px;
-        font-size: 1em;
-        line-height: 35px;
+        font-size: 1.2em;
+        line-height: 30px;
+    
     }
+
 }
